--- a/PA1_template.rmd
+++ b/PA1_template.rmd
@@ -2,7 +2,9 @@
 title: "Activity monitoring data analysis"
 author: "Kidpea LAU"
 date: "25/09/2018"
-output: slidy_presentation
+output: 
+html_document:
+keep_md: true
 ---
 #About the data:
 The data from a personal activity monitoring device. This device collects data at 5 minute intervals through out the day. The data consists of two months of data from an anonymous individual collected during the months of October and November, 2012 and include the number of steps taken in 5 minute intervals each day.
